# spie-glasses

./: CMakeLists.txt  README.org
.archer.d/: init.bash
.archer.d/layer/ubuntu/: layer.bash
.archer.d/layer/ubuntu/app/clang/: layer.bash
.archer.d/layer/ubuntu/app/cmake/: layer.bash
.archer.d/layer/ubuntu/app/gcc/: layer.bash
.archer.d/layer/ubuntu/app/git/: layer.bash
.archer.d/layer/ubuntu/app/llvm/: layer.bash
.archer.d/layer/ubuntu/lang/c-c++/: layer.bash
.archer.d/layer/ubuntu/lib/: layer.bash
.archer.d/layer/ubuntu/lib/boost/: layer.bash
.archer.d/layer/ubuntu/lib/dlib/: layer.bash
.archer.d/layer/ubuntu/lib/fmt/: layer.bash
.archer.d/layer/ubuntu/lib/lz4/: layer.bash
.archer.d/layer/ubuntu/lib/msgpack/: layer.bash
.archer.d/layer/ubuntu/lib/nlohmann-json/: layer.bash
.archer.d/layer/ubuntu/lib/opencv/: layer.bash
.archer.d/layer/ubuntu/lib/zlib/: layer.bash
Android/SmartGlass(TCP+voice)/app/: build.gradle  proguard-rules.pro
Android/SmartGlass(TCP+voice)/app/src/androidTest/java/com/example/jimmy/smartglass/: ExampleInstrumentedTest.java
Android/SmartGlass(TCP+voice)/app/src/main/: AndroidManifest.xml
Android/SmartGlass(TCP+voice)/app/src/main/java/com/example/jimmy/smartglass/: MainActivity.bak1  MainActivity.java  TcpClient.bak1  TcpClient.java
Android/SmartGlass(TCP+voice)/app/src/main/res/layout/: activity_main.xml
Android/SmartGlass(TCP+voice)/app/src/main/res/values/: strings.xml
Android/SmartGlass(TCP+voice)/app/src/test/java/com/example/jimmy/smartglass/: ExampleUnitTest.java
Android/SmartGlass(TCP+voice)/gradle/wrapper/: gradle-wrapper.properties
cmake/Hunter/: config.cmake
cmake/modules/: FindFPlus.cmake  FindJson.cmake  FindLZ4.cmake  FindMsgpack.cmake  FindYamlCpp.cmake
cmake/sweet/: .gitignore  LICENSE  README.org  TODO.org  sweet.cmake
cmake/sweet/cmake/: all.cmake  config.cmake  escape.cmake  log.cmake  target.cmake  utility.cmake
cmake/sweet/doc/command/: target_create.org
cmake/sweet/doc/commands/: target_add.org
include/api/: .template.hpp  Detect.bak.hpp  Detect.hpp  asio_msgpack.hpp  basic_msgpack_reader.hpp  basic_msgpack_writer.hpp  compressed_mat.hpp  cv_msgpack.hpp  dispatcher.hpp  functional.hpp  image_sink.hpp  logging.hpp  message_io_object.hpp  msgpack_reader.hpp  msgpack_writer.hpp  parser.hpp  pointer_compare.hpp  queued_reader.hpp  queued_writer.hpp  requester.hpp  responser.hpp
script/: build.sh  configure.sh  reconfigure.sh  reconfigure_build.sh
spike/: .gitignore  README.org  README.pptx  a.cpp  a.txt  a1.cpp  a2.cpp  a3.cpp  api.hpp  async_io.cpp  audio-client.login.txt  b.cpp  bak.hpp  build  build.sh  c.cpp  c1.cpp  c3.cpp  c4.cpp  c5.cpp  client.cpp  cmd2msgpack.cpp  d.cpp  e.cpp  f.cpp  f1.cpp  img2msgpack.cpp  json2msgpack.cpp  jsonline2msgpack.cpp  msgpack-cvmat.cpp  msgpack2cvmat.cpp  msgpack2json.cpp  output.flv  p.cpp  p.txt  p2.cpp  p3.cpp  p4.cpp  p6.cpp  process.cpp  (+8 more)
spike/include/api/: asio_msgpack.bak.hpp  asio_msgpack.hpp  cv_msgpack.bak.hpp  cv_msgpack.hpp  functional.hpp  parser.hpp
src/: CMakeLists.txt
src/api/: Detect.bak.cpp  Detect.cpp  asio_msgpack.hpp  dispatcher.cpp
src/audio-client/: client.hpp  main.cpp
src/hint-client/: client.hpp  main.cpp
src/hotfix-client/: client.hpp  main.cpp
src/hotfix-server/: main.cpp  server.hpp  session.hpp  session_manager.hpp
src/image-client/: client.bak.hpp  client.hpp  main.bak.cpp  main.cpp
src/server/: main.cpp  main.cpp.bak  server.hpp  session.hpp  session_fwd.hpp  session_manager.hpp
src/simple-client/: client.hpp  main.cpp
src/simple-server/: image_sink.hpp  main.cpp  server.hpp  session.hpp  session_fwd.hpp  session_manager.hpp
